# ghostframe

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  deploy-hf.yml  release.yml
data/demo/: hpv16_expected_output.txt  multi_seq_expected_output.txt  sample.maf  simple_expected_output.txt
docs/: architecture.md  initial-plan.md
frontend/: .gitignore  README.md  eslint.config.mjs  knip.json  next.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/background/: DnaBackground.tsx
frontend/components/dashboard/: AnalysisPanel.tsx  DetailRow.tsx  EvidencePanel.tsx  GenomeBrowser.tsx  HelixExplorer.tsx  LandingExplainer.tsx  NarrativePanel.tsx  NavBar.tsx  NeoantigensPanel.tsx  PipelineTrace.tsx  ReadingFrameViewer.tsx  SankeyChart.tsx  SummaryCards.tsx  VariantTable.tsx
frontend/components/ui/: EffectChip.tsx  EvidenceBadge.tsx  SynmicdbScore.tsx
frontend/e2e/: dashboard.spec.ts
frontend/lib/: colors.ts  config.ts  demo-data.ts  types.ts
frontend/public/: hpv16_k02718.fasta
tests/: conftest.py
tests/api/: test_analysis_stream.py
tests/cli/: test_orfs_cmd.py
tests/domain/: test_hmmer.py
tests/evidence/: test_clinvar.py  test_openprot.py  test_synmicdb.py
tests/fixtures/: edge_cases.fasta  multi_seq.fasta  sample.maf  simple.fasta
tests/mhc/: test_mhcflurry.py
tests/orfs/: test_fasta.py  test_formatter.py  test_scanner.py  test_sequence.py
tests/peptides/: test_generator.py
tests/pipeline/: test_deep_lane.py  test_fast_lane.py
tests/ranking/: test_ranker.py  test_scorer.py
tests/reclassify/: test_engine.py
tests/seqfetch/: test_remote.py  test_seqfetch.py
tests/variants/: test_maf.py
