[project]
name = "ghostframe-workspace"
version = "0.1.0"
description = "GhostFrame workspace root — shared tool config only, no runtime code"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ghostframe[mhc]",
    "ghostframe-api",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "pandas-stubs>=2.0",
    "pyright>=1.1",
    "pre-commit>=4.0",
    "python-semantic-release>=9.0",
]

[tool.uv.sources]
ghostframe = { workspace = true }
ghostframe-api = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/ghostframe",
    "packages/ghostframe-api",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["packages/ghostframe/src", "packages/ghostframe-api/src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "RUF"]

[tool.semantic_release]
version_toml = ["packages/ghostframe/pyproject.toml:project.version"]
tag_format = "v{version}"
build_command = "uv lock && uv build --package ghostframe"
commit_message = "chore(release): v{version} [skip ci]"
no_git_verify = true

[tool.semantic_release.branches.master]
match = "master"
prerelease = false

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.remote]
name = "origin"
type = "github"
token = { env = "GITHUB_TOKEN" }
ignore_token_for_push = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib", "-ra", "--strict-markers"]
markers = [
    "golden: hand-computed ORF output tests for professor grading",
    "integration: tests requiring multiple modules or external services",
    "slow: tests that take significant time (MHC prediction, evidence fetch)",
    "anyio: mark async tests to run with anyio",
]
